Steps to reproduce: 1. Install MRI 1.3.4 ( https://github.com/hanya/MRI/releases ) 2. Restart -> There is an menu entry ( Add-ons ) in Tools menu 3. Remove the profile folder 4. The entry is no longer available. However, the extension is still installed. Reproduced in Version: 7.0.0.0.alpha0+ Build ID: 950e1aec0a984ce40a5038331f491272b51d41fa CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; Locale: en-US (en_US.UTF-8); UI-Language: en-US Calc: threaded
Regression introduced by: https://cgit.freedesktop.org/libreoffice/core/commit/?id=675295d7e18c1505835893e51a853a5b4ce37ed6 author Katarina Behrens <Katarina.Behrens@cib.de> 2019-12-20 15:00:58 +0100 committer Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de> 2020-02-27 10:09:10 +0100 commit 675295d7e18c1505835893e51a853a5b4ce37ed6 (patch) tree 2733e21a25002a2c5aa420e8f7d46f20152b4e6e parent b83b4f967f8cbee208e44600821aa1a5518e34ac (diff) Drop checking for user extensions w/ the same ID on every synchronization Bisected with: bibisect-linux64-6.5 Adding Cc: to Katarina Behrens
Michael Stahl committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/319407dba6f6bb0343865d010bfd436900ad0f2f tdf#131084 Revert "Drop checking for user extensions w/ the same ID on every synchronization" It will be available in 7.0.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
working again in Version: 7.0.0.0.alpha0+ Build ID: 169a10f0e4680814145b668c6320be04038d7a89 CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; Locale: en-US (en_US.UTF-8); UI-Language: en-US Calc: threaded Closing as VERIFIED FIXED @Michael, thanks for reverting the problematic patch