tdf#131084 Revert "Drop checking for user extensions w/ the same ID on every synchronization"

This reverts commit 675295d7e18c1505835893e51a853a5b4ce37ed6.

Beyond the user-installed extension problem in tdf#131084 this also
breaks bundled dictionaries in instdir/share/extensions, which aren't
loaded any more.  This is masked by fall-back code that loads dicts from
/usr/share on Linux so more noticeable on Windows.

Maybe it would be possible to do this only once on user profile creation
but i don't know much about extension stuff...

Rene points out that Debian packages can install bundled extensions
after the user-profile is created so that wouldn't work either.

Change-Id: I9f0071c2441a4cf967f8981ef3a3e064197b88aa